# LNPilot

./: .gitignore  CHANGELOG.md  LICENSE  New Text Document.txt  README.md  mRNAtoolkit_combined_project_spec.md  pyproject.toml
.github/workflows/: ci.yml
docs/: backend-contract.md  equations.md
examples/: batch_example.json  batch_example.yaml  plate_map_example.csv  plate_reader_example.csv
src/lnpilot/: __init__.py  cli.py
src/lnpilot/characterize/: __init__.py  calibration.py  plate_map.py  qc.py  ribogreen.py
src/lnpilot/core/: __init__.py  exceptions.py  models.py  provenance.py  units.py  validation.py
src/lnpilot/formulate/: __init__.py  batch.py  composition.py  mass_balance.py  mixing.py  np_ratio.py  stocks.py
src/lnpilot/io/: __init__.py  csv_io.py  json_io.py  plate_reader.py
src/lnpilot/report/: markdown.py  plots.py
src/lnpilot/web/: __init__.py  app.py  presets.py
src/lnpilot/web/static/: app.js  styles.css
src/lnpilot/web/templates/: base.html  home.html  not_found.html  plan_input.html  plan_results.html
tests/: test_calibration.py  test_cli.py  test_composition.py  test_invalid_inputs.py  test_mixing.py  test_np_ratio.py  test_plan_batch.py  test_properties.py  test_ribogreen.py  test_serialization.py  test_units.py  test_web.py
tests/references/: batch_ref_330ug.json  ribogreen_ee75.json
