[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lnpilot"
version = "0.1.0"
description = "Reproducible mRNA–LNP development from sequence to vial"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "LNPilot contributors" }]
keywords = ["mRNA", "LNP", "formulation", "RiboGreen", "nanoparticle"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "pint>=0.23",
]

[project.optional-dependencies]
plate = ["pandas>=2.0", "openpyxl>=3.1"]
plot = ["matplotlib>=3.7"]
yaml = ["pyyaml>=6.0"]
dev = [
    "pytest>=7.4",
    "hypothesis>=6.90",
    "ruff>=0.1",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.scripts]
lnpilot = "lnpilot.cli:main"

[project.urls]
Homepage = "https://github.com/lnpilot/lnpilot"

[tool.hatch.build.targets.wheel]
packages = ["src/lnpilot"]

[tool.hatch.build.targets.wheel.sources]
"src/lnpilot" = "lnpilot"

[tool.hatch.build.targets.sdist]
include = ["src/lnpilot", "tests", "examples", "docs", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
