[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lnpilot"
version = "0.1.1"
description = "Reproducible mRNA–LNP development from sequence to vial"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "LNPilot contributors" }]
keywords = ["mRNA", "LNP", "formulation", "RiboGreen", "nanoparticle"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "pint>=0.23",
]

[project.optional-dependencies]
plate = ["pandas>=2.0", "openpyxl>=3.1"]
plot = ["matplotlib>=3.7"]
yaml = ["pyyaml>=6.0"]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=7.4",
    "hypothesis>=6.90",
    "ruff>=0.1",
    "mypy>=1.10",
    "build>=1.2",
    "pytest-cov>=5.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.scripts]
lnpilot = "lnpilot.cli:main"

[project.urls]
Homepage = "https://github.com/priyamthakar/LNPilot"
Repository = "https://github.com/priyamthakar/LNPilot"

[tool.hatch.build.targets.wheel]
packages = ["src/lnpilot"]

[tool.hatch.build.targets.wheel.sources]
"src/lnpilot" = "lnpilot"

[tool.hatch.build.targets.sdist]
include = [
    "src/lnpilot",
    "tests",
    "examples",
    "docs",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
files = ["src/lnpilot"]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true

# numpy's bundled stubs use Python 3.12+ `type` syntax that mypy rejects when
# targeting 3.10; skip type-checking them rather than pin the whole project to 3.12.
[[tool.mypy.overrides]]
module = ["numpy.*"]
follow_imports = "skip"
follow_imports_for_stubs = true
